feat: grid layout and redux

--- a/src/styles/pokedex-search.module.sass
+++ b/src/styles/pokedex-search.module.sass
@@ -1,4 +1,9 @@
 .search
+    @media (max-width: 1023px)
+    @media (min-width: 1024px)
+        grid-column: 1 / 4
+        grid-row: 1 / 2
+
     background-color: white
     border-radius: 10px
     height: max-content
