--- a/src/styles/pokemon.module.sass
+++ b/src/styles/pokemon.module.sass
@@ -1,25 +1,78 @@
 .pokemonInfo
+    @media (max-width: 1023px)
+        display: none
+
+    @media (min-width: 1024px)
+        grid-column: 1 / 2
+        grid-row: 2 / 3
+
+        height: 99%
+        width: 85%
+
     display: flex
     justify-content: center
     align-items: center
 
+    justify-self: center
+    align-self: center
+
     padding-bottom: 30px
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3)
 
+    border-radius: 10px
     background-color: white
+    position: relative
 
-    .pokemonCard
+    .pokeball
+        position: absolute
+
+        left: 50%
+        top: 50%
+        transform: translate(-50%, -50%)
+
         display: flex
-        flex-direction: column
         justify-content: center
         align-items: center
 
-        width: 200px
-        // width: 80%
+        background-color: #dbecd3
+
+        border-radius: 100%
+        height: 250px
+        width: 250px
+
+        box-shadow: 0 0 1.5px rgba(0, 0, 0, 0.3)
+
+        &::before, &::after
+            position: absolute
+            content: ''
+
+        &::before
+            background-color: white
+            height: 10%
+            width: 100%
+
+        &::after 
+            background-color: white
+            height: 25%
+            width: 25%
+            border-radius: 100%
+            border: 15px solid white
+        
+    .pokemonCard
+        display: flex
+        flex-direction: column
+        align-items: center
+
+        height: 100%
+        width: 100%
+        min-height: 80vh
+        min-width: 14vw
+
+        z-index: 2
         
         .pokemonImage
-            margin-bottom: -60px
-            z-index: 2
+            margin-top: -20px
+            z-index: 3
             
         .pokemonLabel
             display: flex
@@ -28,5 +81,8 @@
             align-items: center
 
             width: 100%
-            padding: 50px 0 5px 0
             border-radius: 10px
+
+            margin-top: -45px
+
+
